--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -16600,8 +16600,19 @@ form.feed-filters {
   transition: border-color .3s; }
   form.feed-filters.active {
     border-color: #032040; }
+    form.feed-filters.active.search-field-active .filters-header button.search-field-toggle + .search-field-spacer {
+      height: calc(1rem + 45px); }
+      form.feed-filters.active.search-field-active .filters-header button.search-field-toggle + .search-field-spacer + .search-field {
+        -webkit-transform: none;
+            -ms-transform: none;
+                transform: none;
+        opacity: 1;
+        visibility: visible;
+        -webkit-transition-delay: 0s;
+                transition-delay: 0s; }
     form.feed-filters.active .filters-header button.filters-clear,
-    form.feed-filters.active .filters-header button.filters-close {
+    form.feed-filters.active .filters-header button.filters-close,
+    form.feed-filters.active .filters-header button.search-field-toggle {
       opacity: 1;
       visibility: visible;
       -webkit-transition-delay: 0s;
@@ -16612,6 +16623,11 @@ form.feed-filters {
       display: none; }
     form.feed-filters.active .filters-header .filters-nav {
       display: block; }
+      form.feed-filters.active .filters-header .filters-nav.hidden {
+        display: none; }
+        @media (min-width: 992px) {
+          form.feed-filters.active .filters-header .filters-nav.hidden {
+            display: block; } }
     form.feed-filters.active .filters-header .search-field {
       display: block; }
     form.feed-filters.active .filters-header .spacer {
@@ -16626,12 +16642,16 @@ form.feed-filters {
         flex-wrap: wrap;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    position: relative; }
     @media (min-width: 992px) {
       form.feed-filters .filters-header {
         -ms-flex-wrap: nowrap;
             flex-wrap: nowrap; } }
     form.feed-filters .filters-header button.filters-toggle {
+      -webkit-box-ordinal-group: -9;
+          -ms-flex-order: -10;
+              order: -10;
       -webkit-box-flex: 1;
           -ms-flex: 1 1 auto;
               flex: 1 1 auto;
@@ -16764,6 +16784,94 @@ form.feed-filters {
         @media (min-width: 576px) {
           form.feed-filters .filters-header button.filters-close span {
             display: inline; } }
+    form.feed-filters .filters-header button.search-field-toggle {
+      margin-left: 2rem;
+      margin-right: -1.5rem;
+      -webkit-box-ordinal-group: 0;
+          -ms-flex-order: -1;
+              order: -1;
+      border: none;
+      padding: .5rem 0;
+      background-color: transparent;
+      line-height: 1.2;
+      font-size: 0.875rem;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: .1em;
+      text-align: left;
+      outline: none;
+      color: rgba(3, 32, 64, 0.5);
+      opacity: 0;
+      visibility: hidden;
+      -webkit-transition: opacity .15s, color .15s, visibility 0s .15s;
+      transition: opacity .15s, color .15s, visibility 0s .15s; }
+      @media (min-width: 576px) {
+        form.feed-filters .filters-header button.search-field-toggle {
+          margin-right: -1rem; } }
+      @media (min-width: 992px) {
+        form.feed-filters .filters-header button.search-field-toggle {
+          -webkit-box-ordinal-group: 100;
+              -ms-flex-order: 99;
+                  order: 99; } }
+      form.feed-filters .filters-header button.search-field-toggle:hover {
+        color: #0381C3; }
+      form.feed-filters .filters-header button.search-field-toggle:after {
+        content: '';
+        display: inline-block;
+        margin-left: 0;
+        height: 1.5rem;
+        width: 1.5rem;
+        vertical-align: top;
+        margin-top: -.35em;
+        margin-bottom: -.5em;
+        background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23032040" viewBox="0 0 16 16"%3e%3cpath d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/%3e%3c/svg%3e');
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat; }
+        @media (min-width: 576px) {
+          form.feed-filters .filters-header button.search-field-toggle:after {
+            margin-left: .5em; } }
+      form.feed-filters .filters-header button.search-field-toggle span {
+        display: none; }
+        @media (min-width: 576px) {
+          form.feed-filters .filters-header button.search-field-toggle span {
+            display: inline; } }
+      form.feed-filters .filters-header button.search-field-toggle + .search-field-spacer {
+        width: 100%;
+        height: 0;
+        -webkit-transition: height .2s ease-out;
+        transition: height .2s ease-out; }
+        @media (min-width: 992px) {
+          form.feed-filters .filters-header button.search-field-toggle + .search-field-spacer {
+            display: none; } }
+        form.feed-filters .filters-header button.search-field-toggle + .search-field-spacer + .search-field {
+          position: absolute;
+          left: 0;
+          width: 100%;
+          top: 3rem;
+          margin-top: 0;
+          opacity: 0;
+          visibility: hidden;
+          -webkit-transform: translateY(-1rem);
+              -ms-transform: translateY(-1rem);
+                  transform: translateY(-1rem);
+          -webkit-transition: opacity .2s, visibility 0s .2s, -webkit-transform .2s ease-out;
+          transition: opacity .2s, visibility 0s .2s, -webkit-transform .2s ease-out;
+          transition: opacity .2s, visibility 0s .2s, transform .2s ease-out;
+          transition: opacity .2s, visibility 0s .2s, transform .2s ease-out, -webkit-transform .2s ease-out; }
+          @media (min-width: 992px) {
+            form.feed-filters .filters-header button.search-field-toggle + .search-field-spacer + .search-field {
+              position: relative;
+              top: 0;
+              width: 16rem;
+              margin: -.5rem 0;
+              margin-right: -1rem;
+              -webkit-transform: translateX(0.5rem);
+                  -ms-transform: translateX(0.5rem);
+                      transform: translateX(0.5rem);
+              -webkit-box-ordinal-group: 99;
+                  -ms-flex-order: 98;
+                      order: 98; } }
     form.feed-filters .filters-header ul.options.quick-filters {
       width: 100%;
       margin-top: 1rem; }
@@ -16785,6 +16893,8 @@ form.feed-filters {
           -webkit-box-flex: 1;
               -ms-flex: 1 1 auto;
                   flex: 1 1 auto; } }
+      form.feed-filters .filters-header .filters-nav.hidden {
+        opacity: 0; }
       form.feed-filters .filters-header .filters-nav ul {
         margin: 0;
         padding: 0;
