--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_forms.scss
@@ -169,9 +169,25 @@ form.feed-filters {
 	transition: border-color .3s;
 	&.active {
 		border-color: $primary;
+		&.search-field-active {
+			.filters-header {
+				button.search-field-toggle {
+					+ .search-field-spacer {
+						height: calc(1rem + 45px);
+						+ .search-field {
+							transform: none;
+							opacity: 1;
+							visibility: visible;
+							transition-delay: 0s;
+						}
+					}
+				}
+			}
+		}
 		.filters-header {
 			button.filters-clear,
-			button.filters-close {
+			button.filters-close,
+			button.search-field-toggle {
 				opacity: 1;
 				visibility: visible;
 				transition-delay: 0s;
@@ -184,6 +200,12 @@ form.feed-filters {
 			}
 			.filters-nav {
 				display: block;
+				&.hidden {
+					display: none;
+					@include media-breakpoint-up(lg) {
+						display: block;
+					}
+				}
 			}
 			.search-field {
 				display: block;
@@ -204,10 +226,12 @@ form.feed-filters {
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
+		position: relative;
 		@include media-breakpoint-up(lg) {
 			flex-wrap: nowrap;
 		}
 		button.filters-toggle {
+			order: -10;
 			flex: 1 1 auto;
 			border: none;
 			padding: 0;
@@ -341,6 +365,85 @@ form.feed-filters {
 				}
 			}
 		}
+		button.search-field-toggle {
+			margin-left: 2rem;
+			margin-right: -1.5rem;
+			order: -1;
+			border: none;
+			padding: .5rem 0;
+			background-color: transparent;
+			line-height: $line-height-sm;
+			font-size: 0.875rem;
+			font-weight: 700;
+			text-transform: uppercase;
+			letter-spacing: .1em;
+			text-align: left;
+			outline: none;
+			color: rgba($primary, .5);
+			opacity: 0;
+			visibility: hidden;
+			transition: opacity .15s, color .15s, visibility 0s .15s;
+			@include media-breakpoint-up(sm) {
+				margin-right: -1rem;
+			}
+			@include media-breakpoint-up(lg) {
+				order: 99;
+			}
+			&:hover {
+				color: $blue;
+			}
+			&:after {
+				content: '';
+				display: inline-block;
+				margin-left: 0;
+				height: 1.5rem;
+				width: 1.5rem;
+				vertical-align: top;
+				margin-top: -.35em;
+				margin-bottom: -.5em;
+				background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$primary}" viewBox="0 0 16 16"><path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/></svg>'));
+				background-position: center;
+				background-size: contain;
+				background-repeat: no-repeat;
+				@include media-breakpoint-up(sm) {
+					margin-left: .5em;
+				}
+			}
+			span {
+				display: none;
+				@include media-breakpoint-up(sm) {
+					display: inline;
+				}
+			}
+			+ .search-field-spacer {
+				width: 100%;
+				height: 0;
+				transition: height .2s ease-out;
+				@include media-breakpoint-up(lg) {
+					display: none;
+				}
+				+ .search-field {
+					position: absolute;
+					left: 0;
+					width: 100%;
+					top: 3rem;
+					margin-top: 0;
+					opacity: 0;
+					visibility: hidden;
+					transform: translateY(-1rem);
+					transition: opacity .2s, visibility 0s .2s, transform .2s ease-out;
+					@include media-breakpoint-up(lg) {
+						position: relative;
+						top: 0;
+						width: 16rem;
+						margin: -.5rem 0;
+						margin-right: -1rem;
+						transform: translateX(.5rem);
+						order: 98;
+					}
+				}
+			}
+		}
 		ul.options.quick-filters {
 			width: 100%;
 			margin-top: 1rem;
@@ -358,6 +461,9 @@ form.feed-filters {
 				margin-top: 0;
 				width: auto;
 				flex: 1 1 auto;
+			}
+			&.hidden {
+				opacity: 0;
 			}
 			ul {
 				margin: 0;
