--- a/wp-content/plugins/crown-blocks/src/block-container/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-container/style.scss
@@ -106,7 +106,7 @@ $spacer: 1rem;
 			max-width: 100%;
 			margin: 0 auto;
 			position: relative;
-			z-index: 1;
+			// z-index: 1;
 			> *:last-child {
 				margin-bottom: 0;
 			}
