--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -213,6 +213,19 @@
 		color: rgba($dark, .8);
 		transition: color .15s;
 	}
+	.entry-centers {
+		span {
+			display: inline-block;
+			line-height: 1.2;
+			font-weight: 700;
+			font-size: 0.625rem;
+			letter-spacing: .05em;
+			text-transform: uppercase;
+			border-radius: 10rem;
+			border: 1px solid $primary;
+			padding: .5rem .75rem;
+		}
+	}
 }
 
 .entry-event-date {
