--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -22230,10 +22230,15 @@ nav.pagination {
     @media (min-width: 768px) {
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo {
         margin-bottom: 1rem; } }
+    .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo:hover .overlay-label:before {
+      opacity: 1;
+      -webkit-transform: none;
+          -ms-transform: none;
+              transform: none; }
     .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo > .inner {
       height: 0;
       position: relative;
-      padding-top: 125%;
+      padding-top: 100%;
       background-color: #696D7D; }
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo > .inner:after {
         content: '';
@@ -22282,6 +22287,38 @@ nav.pagination {
         mix-blend-mode: normal; }
       .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .image img {
         display: none; }
+    .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .overlay-label {
+      text-transform: uppercase;
+      letter-spacing: .1;
+      font-weight: 500;
+      line-height: 1.2;
+      font-size: 1rem;
+      position: absolute;
+      left: 1rem;
+      bottom: .75rem;
+      color: #fff;
+      -webkit-transition: padding .2s ease-out;
+      transition: padding .2s ease-out; }
+      .wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .overlay-label:before {
+        content: '';
+        display: block;
+        position: absolute;
+        background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23ffffff" class="bi bi-eye-fill" viewBox="0 0 16 16"%3e%3cpath d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/%3e%3cpath d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/%3e%3c/svg%3e');
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 1rem;
+        height: 1rem;
+        right: -1.5rem;
+        top: calc(50% - (1rem / 2));
+        -webkit-transition: opacity .2s, -webkit-transform .2s ease-out;
+        transition: opacity .2s, -webkit-transform .2s ease-out;
+        transition: opacity .2s, transform .2s ease-out;
+        transition: opacity .2s, transform .2s ease-out, -webkit-transform .2s ease-out;
+        -webkit-transform: translateX(-0.5rem);
+            -ms-transform: translateX(-0.5rem);
+                transform: translateX(-0.5rem);
+        opacity: 0; }
   .wp-block-crown-blocks-team-member-index article.type-team_member .entry-teaser {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
