--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -23831,6 +23831,96 @@ nav.pagination {
   right: 0;
   opacity: 1; }
 
+/*	Job Index
+---------------------------------------------------------*/
+.wp-block-crown-blocks-job-index article.type-job {
+  margin-bottom: 2rem; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-job-index article.type-job {
+      margin-bottom: 4rem; } }
+  .wp-block-crown-blocks-job-index article.type-job a {
+    display: block;
+    color: inherit; }
+    .wp-block-crown-blocks-job-index article.type-job a:hover .entry-title {
+      color: #0381C3; }
+      .wp-block-crown-blocks-job-index article.type-job a:hover .entry-title:after {
+        right: 0;
+        opacity: 1; }
+  .wp-block-crown-blocks-job-index article.type-job .entry-centers span {
+    display: inline-block;
+    line-height: 1.2;
+    font-weight: 700;
+    font-size: 0.625rem;
+    letter-spacing: .05em;
+    text-transform: uppercase;
+    border-radius: 10rem;
+    border: 1px solid #032040;
+    padding: .5rem .75rem; }
+  .wp-block-crown-blocks-job-index article.type-job .entry-title {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    -webkit-transition: color .15s;
+    transition: color .15s;
+    margin-bottom: 0.5rem; }
+    .wp-block-crown-blocks-job-index article.type-job .entry-title:after {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: icomoon;
+      content: "";
+      position: relative;
+      margin-left: .5em;
+      top: .08em;
+      right: .25em;
+      opacity: 0;
+      -webkit-transition: right ease-out .15s, opacity .15s;
+      transition: right ease-out .15s, opacity .15s; }
+
+.wp-block-crown-blocks-job-index-single .entry-contents .entry-header {
+  margin-bottom: 2rem; }
+
+.wp-block-crown-blocks-job-index-single .entry-contents .entry-centers span {
+  display: inline-block;
+  line-height: 1.2;
+  font-weight: 700;
+  font-size: 0.625rem;
+  letter-spacing: .05em;
+  text-transform: uppercase;
+  border-radius: 10rem;
+  border: 1px solid #032040;
+  padding: .5rem .75rem; }
+
+.wp-block-crown-blocks-job-index-single .entry-footer {
+  margin-top: 4rem; }
+  .wp-block-crown-blocks-job-index-single .entry-footer .return-to-index {
+    display: inline-block;
+    font-size: 1.625rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    line-height: 1.2;
+    color: #032040; }
+    .wp-block-crown-blocks-job-index-single .entry-footer .return-to-index:hover {
+      color: #0381C3; }
+    .wp-block-crown-blocks-job-index-single .entry-footer .return-to-index:before {
+      content: '';
+      width: 1em;
+      height: 1em;
+      display: inline-block;
+      margin-right: .5em;
+      background-image: url(s);
+      background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%230381C3" class="bi bi-grid-3x3-gap-fill" viewBox="0 0 16 16"%3e%3cpath d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"/%3e%3c/svg%3e');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      vertical-align: top;
+      margin-top: 0.075em; }
+
 #header {
   background-color: transparent;
   position: sticky;
