--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -3650,3 +3650,107 @@
 		}
 	}
 }
+
+
+/*	Job Index
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-job-index {
+	article.type-job {
+		margin-bottom: 2rem;
+		@include media-breakpoint-up(md) {
+			margin-bottom: 4rem;
+		}
+		a {
+			display: block;
+			color: inherit;
+			&:hover {
+				.entry-title {
+					color: $blue;
+					&:after {
+						right: 0;
+						opacity: 1;
+					}
+				}
+			}
+		}
+		.entry-centers {
+			span {
+				display: inline-block;
+				line-height: 1.2;
+				font-weight: 700;
+				font-size: 0.625rem;
+				letter-spacing: .05em;
+				text-transform: uppercase;
+				border-radius: 10rem;
+				border: 1px solid $primary;
+				padding: .5rem .75rem;
+			}
+		}
+		.entry-title {
+			font-size: 1.5rem;
+			text-transform: uppercase;
+			letter-spacing: .1em;
+			transition: color .15s;
+			margin-bottom: 0.5rem;
+			&:after {
+				@include icon(map-get($icomoon-icons, arrow-right), icomoon);
+				position: relative;
+				margin-left: .5em;
+				top: .08em;
+				right: .25em;
+				opacity: 0;
+				transition: right ease-out .15s, opacity .15s;
+			}
+		}
+	}
+}
+.wp-block-crown-blocks-job-index-single {
+	.entry-contents {
+		.entry-header {
+			margin-bottom: 2rem;
+		}
+		.entry-centers {
+			span {
+				display: inline-block;
+				line-height: 1.2;
+				font-weight: 700;
+				font-size: 0.625rem;
+				letter-spacing: .05em;
+				text-transform: uppercase;
+				border-radius: 10rem;
+				border: 1px solid $primary;
+				padding: .5rem .75rem;
+			}
+		}
+	}
+	.entry-footer {
+		margin-top: 4rem;
+		.return-to-index {
+			display: inline-block;
+			font-size: 1.625rem;
+			font-weight: 700;
+			text-transform: uppercase;
+			letter-spacing: .1em;
+			line-height: $line-height-sm;
+			color: $primary;
+			&:hover {
+				color: $blue;
+			}
+			&:before {
+				content: '';
+				width: 1em;
+				height: 1em;
+				display: inline-block;
+				margin-right: .5em;
+				background-image: url(s);
+				background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$blue}" class="bi bi-grid-3x3-gap-fill" viewBox="0 0 16 16"><path d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"/></svg>'));
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: contain;
+				vertical-align: top;
+				margin-top: 0.075em;
+			}
+		}
+	}
+}
