--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -608,6 +608,165 @@
 	}
 }
 
+.webinar-teaser {
+	display: flex;
+	a {
+		width: 100%;
+		color: inherit;
+		transition: background-color .3s, box-shadow .3s;
+		display: block;
+		position: relative;
+		@include media-breakpoint-up(md) {
+			padding-bottom: 0.375rem;
+		}
+		&:hover {
+			@include media-breakpoint-up(md) {
+				background-color: $x-light-blue;
+				box-shadow: 0 2px 16px rgba(#000, .2);
+			}
+			.entry-featured-image {
+				> .inner:after {
+					left: 0;
+					opacity: 1;
+				}
+				.image {
+					opacity: .4;
+				}
+			}
+			> .bottom-border {
+				width: 100%;
+				opacity: 1;
+			}
+		}
+		> .bottom-border {
+			display: none;
+			border-top: 0.375rem solid #444;
+			transition: opacity .3s, width .3s;
+			opacity: 0;
+			width: 0;
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			@include media-breakpoint-up(md) {
+				display: block;
+			}
+		}
+	}
+	.entry-featured-image {
+		display: flex;
+		margin-bottom: 1rem;
+		&:before {
+			content: '';
+			display: block;
+			width: 0;
+			height: 0;
+			padding-top: 50%;
+		}
+		> .inner {
+			width: 100%;
+			position: relative;
+			background-color: #444;
+			overflow: hidden;
+			&:after {
+				@include icon(map-get($icomoon-icons, arrow-right-long), icomoon);
+				position: absolute;
+				top: 50%;
+				margin-top: -1rem;
+				left: -.5rem;
+				width: 100%;
+				text-align: center;
+				transition: left ease-out .15s, opacity .15s;
+				opacity: 0;
+				font-size: 2rem;
+				line-height: 1;
+			}
+			&.dark {
+				color: #fff;
+			}
+			&.light {
+				color: $body-color;
+			}
+		}
+		.image {
+			position: absolute;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+			mix-blend-mode: multiply;
+			opacity: .5;
+			filter: grayscale(1);
+			transition: opacity .3s;
+			img {
+				display: none;
+			}
+		}
+	}
+	.entry-header,
+	.entry-excerpt {
+		@include media-breakpoint-up(md) {
+			padding-left: 1rem;
+			padding-right: 1rem;
+		}
+	}
+	.entry-header {
+		margin-bottom: .5rem;
+	}
+	.entry-topic {
+		margin-bottom: 1rem;
+		.topic {
+			transition: background-color .2s, color .2s, boder-color .2s;
+			display: inline-block;
+			line-height: $line-height-sm;
+			font-weight: 700;
+			font-size: 0.625rem;
+			letter-spacing: .05em;
+			text-transform: uppercase;
+			border-radius: 10rem;
+			border: 1px solid $primary;
+			padding: .5rem .75rem;
+			color: $primary;
+		}
+	}
+	.entry-title {
+		margin: 0;
+		font-size: 1.75rem;
+		font-weight: 500;
+	}
+	.entry-excerpt {
+		font-size: 1.125rem;
+	}
+	& {
+		a:hover {
+			.entry-featured-image > .inner:after {
+				left: 50%;
+				transform: scale(1.1);
+			}
+		}
+		.entry-featured-image > .inner {
+			&.dark:after { background-image: escape-svg(url('data:image/svg+xml,<svg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#{$white}"><path d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"></path></svg>')); }
+			&.light:after { background-image: escape-svg(url('data:image/svg+xml,<svg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#{$body-color}"><path d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"></path></svg>')); }
+			&:after {
+				content: '';
+				background-image: escape-svg(url('data:image/svg+xml,<svg width="68px" height="87px" viewBox="0 0 68 87" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#{$white}"><path d="M0,2.154 L0,84.846 C0,86.0327487 1.31286893,86.7495111 2.31113639,86.1077677 L66.6271364,44.7617677 C67.5456212,44.1713132 67.5456212,42.8286868 66.6271364,42.2382323 L2.31113639,0.892232287 C1.31286893,0.250488924 0,0.96725131 0,2.154 Z M3,4.901 L63.042,43.5 L3,82.098 L3,4.901 Z" fill-rule="nonzero"></path></svg>'));
+				background-position: center;
+				background-size: contain;
+				background-repeat: no-repeat;
+				width: 4rem;
+				height: 4rem;
+				margin-top: -2rem;
+				left: 50%;
+				margin-left: -2rem;
+				opacity: 1;
+				transition: transform .3s;
+			}
+		}
+	}
+}
+
 .ajax-loader {
 	position: relative;
 	&.loading {
