--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
@@ -37,7 +37,8 @@
 	> .wp-block-crown-blocks-post-header,
 	> .wp-block-crown-blocks-resource-header,
 	> .wp-block-crown-blocks-event-header,
-	> .wp-block-crown-blocks-client-story-header {
+	> .wp-block-crown-blocks-client-story-header,
+	> .wp-block-crown-blocks-webinar-header {
 		&:first-child {
 			margin-top: -40px;
 			@include media-breakpoint-up(md) {
