--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2173,6 +2173,11 @@
 			// @include media-breakpoint-up(xl) {
 			// 	padding-top: 1rem;
 			// }
+			&.no-border {
+				padding-bottom: 0;
+				border-bottom: none;
+				margin-bottom: 0;
+			}
 		}
 		.entry-title {
 			font-size: 1rem;
