--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -23364,14 +23364,17 @@ nav.pagination {
     width: 100%;
     padding: 0 1rem 2rem; }
 
-.wp-block-crown-blocks-resource-index article.type-resource {
+.wp-block-crown-blocks-resource-index article.type-resource,
+.wp-block-crown-blocks-resource-index article.type-resource_s {
   width: 100%;
   padding: 0 1rem 2rem; }
   @media (min-width: 768px) {
-    .wp-block-crown-blocks-resource-index article.type-resource {
+    .wp-block-crown-blocks-resource-index article.type-resource,
+    .wp-block-crown-blocks-resource-index article.type-resource_s {
       width: 50%; } }
   @media (min-width: 992px) {
-    .wp-block-crown-blocks-resource-index article.type-resource {
+    .wp-block-crown-blocks-resource-index article.type-resource,
+    .wp-block-crown-blocks-resource-index article.type-resource_s {
       width: 33.33333%; } }
 
 /*	Event Header
