Fixing data syndication

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
@@ -318,7 +318,8 @@ body.single-team_member {
 }
 
 
-body.single-resource {
+body.single-resource,
+body.single-resource_s {
 	#related-content {
 		margin-top: 4rem;
 		@include media-breakpoint-up(md) {
