--- a/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
@@ -352,7 +352,8 @@ body.single-resource_s {
 }
 
 
-body.single-webinar {
+body.single-webinar,
+body.single-webinar_s {
 	#related-content {
 		margin-top: 4rem;
 		@include media-breakpoint-up(md) {
