Setting up theme core styles

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -206,6 +206,7 @@ $btn-line-height-lg:          $input-btn-line-height-lg !default;
 
 $btn-font-weight:             700 !default;
 $btn-letter-spacing:          .05em !default;
+$btn-text-transform:          none !default;
 
 $btn-border-radius:           0 !default;
 $btn-border-radius-lg:        0 !default;
