--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/editor-style.scss
@@ -4,7 +4,12 @@
 
 @import 'imports/_variables.scss';
 
-@import '../../../../norcal-sbdc/assets/src/scss/style.scss';
+@import '../../../../norcal-sbdc/assets/src/scss/editor-style.scss';
 
 @import 'imports/_common.scss';
-@import 'imports/_template.scss';
+
+
+
+.wp-block[data-type="crown-blocks/header"] > .crown-block-editor-container > .wp-block-crown-blocks-header > hr {
+	height: 1.25rem;
+}
