--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_variables.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_variables.scss
@@ -1,11 +1,11 @@
 
 
-$blue:           #0081B7 !default;
-$magenta:        #D50679 !default;
-$yellow:         #FEC403 !default;
-$dark-gray:      #2C3E4B !default;
+$dark-blue:      #1D2F3C;
+$blue:           #0081B7;
+$magenta:        #D50679;
+$yellow:         #FEC403;
+$dark-gray:      #2C3E4B;
 
-$colors: () !default;
 $colors: map-merge(
 	(
 		'magenta': $magenta,
@@ -14,11 +14,10 @@ $colors: map-merge(
 	$colors
 );
 
-$font-family-sans-serif: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-mono: 'Roboto Mono', monospace !default;
-$headings-font-weight: 700 !default;
+$font-family-mono: 'Roboto Mono', monospace;
+$headings-font-weight: 700;
 
-$btn-font-family: $font-family-mono !default;
-$btn-font-weight: 600 !default;
-$btn-letter-spacing: .2em !default;
-$btn-text-transform: uppercase !default;
+$btn-font-family: $font-family-mono;
+$btn-font-weight: 600;
+$btn-letter-spacing: .2em;
+$btn-text-transform: uppercase;
