Updating fonts and logos

--- a/wp-content/plugins/crown-blocks/src/block-container/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-container/style.scss
@@ -76,6 +76,13 @@ $spacer: 1rem;
 		right: 0;
 		bottom: 0;
 		overflow: hidden;
+		> .inner {
+			position: absolute;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+		}
 		.bg-image {
 			position: absolute;
 			left: 0;
