--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_variables.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_variables.scss
@@ -14,10 +14,14 @@ $colors: map-merge(
 	$colors
 );
 
-$font-family-mono: 'Roboto Mono', monospace;
+$font-family-sans-serif: "Founders Grotesk", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif-alt: "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif-ext: "Helvetica Neue Extended", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-mono: 'Founders Grotesk Mono', monospace;
 $headings-font-weight: 700;
+$headings-font-family: $font-family-sans-serif-ext;
 
 $btn-font-family: $font-family-mono;
-$btn-font-weight: 600;
-$btn-letter-spacing: .2em;
+$btn-font-weight: 500;
+$btn-letter-spacing: .1em;
 $btn-text-transform: uppercase;
