--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/style.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/style.scss
@@ -6,5 +6,6 @@
 
 @import '../../../../norcal-sbdc/assets/src/scss/style.scss';
 
+@import 'imports/_fonts.scss';
 @import 'imports/_common.scss';
 @import 'imports/_template.scss';
