--- a/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
@@ -19663,6 +19663,9 @@ nav.pagination {
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); }
 
+.wp-block-crown-blocks-container > .container-bg .bg-image.rellax {
+  min-height: 100vh; }
+
 /*	Multi-Column
 ---------------------------------------------------------*/
 .wp-block-crown-blocks-multi-column.relative-to-container-width > .inner > .multi-column-columns {
@@ -20151,8 +20154,8 @@ nav.pagination {
       bottom: 0;
       height: 0.375rem;
       background-color: #D11141;
-      background: -webkit-gradient(linear, left top, right top, from(#032040), to(#D11141));
-      background: linear-gradient(to right, #032040, #D11141); }
+      background: -webkit-gradient(linear, left top, right top, from(#1D2F3C), to(#D11141));
+      background: linear-gradient(to right, #1D2F3C, #D11141); }
   .wp-block-crown-blocks-section-nav.layout-sidebar .section-nav-nav .menu {
     font-size: 1.25rem;
     letter-spacing: 0;
@@ -22220,7 +22223,7 @@ nav.pagination {
           -ms-flex-order: 10;
               order: 10; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member[data-color="dark-blue"] > .inner {
-      background-color: #032040; }
+      background-color: #1D2F3C; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member[data-color="blue"] > .inner {
       background-color: #0081B7; }
     .wp-block-crown-blocks-team-member-index .drawer article.type-team_member[data-color="red"] > .inner {
@@ -22472,14 +22475,14 @@ nav.pagination {
     display: -ms-flexbox;
     display: flex;
     color: inherit;
-    background-color: #032040;
+    background-color: #1D2F3C;
     color: #fff;
     -webkit-transition: background-color .4s, -webkit-box-shadow .4s;
     transition: background-color .4s, -webkit-box-shadow .4s;
     transition: background-color .4s, box-shadow .4s;
     transition: background-color .4s, box-shadow .4s, -webkit-box-shadow .4s; }
     .wp-block-crown-blocks-post-index article.type-post a.color-dark-blue {
-      background-color: #032040; }
+      background-color: #1D2F3C; }
     .wp-block-crown-blocks-post-index article.type-post a.color-blue {
       background-color: #0081B7; }
     .wp-block-crown-blocks-post-index article.type-post a.color-red {
