--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -94,6 +94,11 @@
 		border-radius: 3px;
 		box-shadow: 0 0 20px fade-out(#000, .85);
 	}
+	> .container-bg {
+		.bg-image.rellax {
+			min-height: 100vh;
+		}
+	}
 }
 
 
