Adding fonts to editor

--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/editor-style.scss
@@ -6,6 +6,7 @@
 
 @import '../../../../norcal-sbdc/assets/src/scss/editor-style.scss';
 
+@import 'imports/_fonts.scss';
 @import 'imports/_common.scss';
 
 
