--- a/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
@@ -25107,6 +25107,102 @@ body {
     margin-left: 0;
     margin-right: 0; }
 
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("../fonts/founders-grotesk/FoundersGrotesk-Regular.woff2") format("woff2"), url("../fonts/founders-grotesk/FoundersGrotesk-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("../fonts/founders-grotesk/FoundersGrotesk-RegularItalic.woff2") format("woff2"), url("../fonts/founders-grotesk/FoundersGrotesk-RegularItalic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("../fonts/founders-grotesk/FoundersGrotesk-Medium.woff2") format("woff2"), url("../fonts/founders-grotesk/FoundersGrotesk-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("../fonts/founders-grotesk/FoundersGrotesk-MediumItalic.woff2") format("woff2"), url("../fonts/founders-grotesk/FoundersGrotesk-MediumItalic.woff") format("woff");
+  font-weight: 500;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("../fonts/founders-grotesk/FoundersGrotesk-Bold.woff2") format("woff2"), url("../fonts/founders-grotesk/FoundersGrotesk-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk';
+  src: url("../fonts/founders-grotesk/FoundersGrotesk-BoldItalic.woff2") format("woff2"), url("../fonts/founders-grotesk/FoundersGrotesk-BoldItalic.woff") format("woff");
+  font-weight: 700;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Founders Grotesk Mono';
+  src: url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Light.woff2") format("woff2"), url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk Mono';
+  src: url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Regular.woff2") format("woff2"), url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk Mono';
+  src: url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Medium.woff2") format("woff2"), url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk Mono';
+  src: url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Semibold.woff2") format("woff2"), url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Semibold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Founders Grotesk Mono';
+  src: url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Bold.woff2") format("woff2"), url("../fonts/founders-grotesk-mono/FoundersGroteskMono-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("../fonts/helvetica-neue/HelveticaNeue.woff2") format("woff2"), url("../fonts/helvetica-neue/HelveticaNeue.woff") format("woff");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("../fonts/helvetica-neue/HelveticaNeue-Italic.woff2") format("woff2"), url("../fonts/helvetica-neue/HelveticaNeue-Italic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("../fonts/helvetica-neue/HelveticaNeue-Bold.woff2") format("woff2"), url("../fonts/helvetica-neue/HelveticaNeue-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("../fonts/helvetica-neue/HelveticaNeue-BoldItalic.woff2") format("woff2"), url("../fonts/helvetica-neue/HelveticaNeue-BoldItalic.woff") format("woff");
+  font-weight: 700;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Helvetica Neue Extended';
+  src: url("../fonts/helvetica-neue/HelveticaNeue-HeavyExt.woff2") format("woff2"), url("../fonts/helvetica-neue/HelveticaNeue-HeavyExt.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
+
 h1, .h1 {
   font-family: "Helvetica Neue Extended", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700; }
