--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_variables.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_variables.scss
@@ -18,6 +18,7 @@ $font-family-sans-serif: "Founders Grotesk", "Helvetica Neue", Arial, "Noto Sans
 $font-family-sans-serif-alt: "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-sans-serif-ext: "Helvetica Neue Extended", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-mono: 'Founders Grotesk Mono', monospace;
+$icomoon-font-folder-path: "../../../norcal-sbdc/assets/fonts/icomoon";
 $headings-font-weight: 700;
 $headings-font-family: $font-family-sans-serif-ext;
 
