--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_icons.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_icons.scss
@@ -11,11 +11,11 @@ $icomoon-icons: (
 
 @font-face {
 	font-family: 'icomoon';
-	src: url('../fonts/icomoon/icomoon.eot?y3hcw8');
-	src: url('../fonts/icomoon/icomoon.eot?y3hcw8#iefix') format('embedded-opentype'),
-	     url('../fonts/icomoon/icomoon.ttf?y3hcw8') format('truetype'),
-	     url('../fonts/icomoon/icomoon.woff?y3hcw8') format('woff'),
-	     url('../fonts/icomoon/icomoon.svg?y3hcw8#icomoon') format('svg');
+	src: url('#{$icomoon-font-folder-path}/icomoon.eot?y3hcw8');
+	src: url('#{$icomoon-font-folder-path}/icomoon.eot?y3hcw8#iefix') format('embedded-opentype'),
+	     url('#{$icomoon-font-folder-path}/icomoon.ttf?y3hcw8') format('truetype'),
+	     url('#{$icomoon-font-folder-path}/icomoon.woff?y3hcw8') format('woff'),
+	     url('#{$icomoon-font-folder-path}/icomoon.svg?y3hcw8#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
