--- a/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/editor-style.css
@@ -19664,7 +19664,8 @@ nav.pagination {
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); }
 
 .wp-block-crown-blocks-container > .container-bg .bg-image.rellax {
-  min-height: 100vh; }
+  min-height: calc(100% + 8vh);
+  top: -4vh; }
 
 /*	Multi-Column
 ---------------------------------------------------------*/
