Adding sticky scroll

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -133,6 +133,13 @@
 			}
 		}
 	}
+	&.sticky-scroll.sticky-scrolled {
+		> .inner > .multi-column-columns > .inner > .wp-block-crown-blocks-column {
+			&.scroll-column {
+				transition: mask-position .5s;
+			}
+		}
+	}
 }
 
 
